Quartz sync: Apr 22, 2024, 4:40 PM

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
     "terminal.integrated.fontFamily": "Lekton Nerd Font Mono",
     "terminal.integrated.fontSize": 14,
     "terminal.integrated.fontWeight": "800",
-    "terminal.integrated.lineHeight": 1.2,
-    "terminal.integrated.env.windows": {},
+    "terminal.integrated.lineHeight": 1.2
+    },
 }
